--- a/vue.js/package.json
+++ b/vue.js/package.json
@@ -2,7 +2,7 @@
   "name": "vuelearn",
   "version": "1.0.0",
   "description": "learn vue.js",
-  "main": "src/scripts/index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/Echzio/til.git",
   "author": "Echzio <aleksassincreed@yandex.ru>",
   "license": "MIT",
@@ -25,5 +25,6 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
-  }
+  },
+  "dependencies": {}
 }
