--- a/React/package.json
+++ b/React/package.json
@@ -13,20 +13,25 @@
     "prod": "webpack --mode production"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
-    "@babel/register": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "postcss-loader": "^3.0.0",
+    "react-hot-loader": "^4.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
