--- a/React/package.json
+++ b/React/package.json
@@ -10,6 +10,7 @@
     "build": "webpack --mode development",
     "watch": "webpack --watch --mode development",
     "dev": "webpack-dev-server --open --mode development",
+    "pretty": "prettier --write src/**/*.jsx",
     "prod": "webpack --mode production"
   },
   "devDependencies": {
@@ -23,10 +24,12 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.16.1",
     "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -38,5 +41,9 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
-  }
+  },
+   "husky": {
+    "hooks": {
+      "pre-commit": "yarn pretty"
+    }
 }
