--- a/React/package.json
+++ b/React/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --mode development",
     "watch": "webpack --watch --mode development",
     "dev": "webpack-dev-server --open --mode development",
-    "pretty": "prettier --write src/**/*.jsx",
+    "pretty": "prettier --write src/**/*.*",
     "prod": "webpack --mode production"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "prettier": "^1.16.1",
     "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
+    "stylelint-config-standard": "^18.2.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
@@ -42,8 +43,9 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-   "husky": {
+  "husky": {
     "hooks": {
       "pre-commit": "yarn pretty"
     }
+  }
 }
