--- a/React/package.json
+++ b/React/package.json
@@ -19,8 +19,7 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "autoprefixer": "^9.4.5",
+    "@babel/register": "^7.0.0",    
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -29,6 +28,7 @@
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
     "prettier": "^1.16.1",
     "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
