--- a/React/package.json
+++ b/React/package.json
@@ -24,13 +24,13 @@
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
-    "prettier": "^1.16.4",
-    "react-hot-loader": "^4.7.2",
+    "prettier": "^1.16.4",    
     "sass-loader": "^7.1.0",
     "stylelint-config-standard": "^18.2.0",
     "style-loader": "^0.23.1",
@@ -40,12 +40,19 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-hot-loader": "^4.7.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn pretty"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js, jsx, scss}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
