--- a/React/package.json
+++ b/React/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.16.4",    
     "sass-loader": "^7.1.0",
     "stylelint-config-standard": "^18.2.0",
+    "terser-webpack-plugin": "^1.2.3",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
