--- a/React/Routing boilerplate/package.json
+++ b/React/Routing boilerplate/package.json
@@ -45,6 +45,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.11.0",
+    "@hot-loader/react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
   },
   "husky": {
