--- a/React/Routing boilerplate/package.json
+++ b/React/Routing boilerplate/package.json
@@ -14,39 +14,42 @@
     "prod": "webpack --mode production"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
+    "@babel/register": "^7.5.5",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.4.1",
-    "lint-staged": "^8.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "husky": "^3.0.3",
+    "lint-staged": "^9.2.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.6.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.18.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^7.2.0",
+    "style-loader": "^1.0.0",
     "stylelint-config-standard": "^18.3.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1"
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.8.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.11.0",
-    "@hot-loader/react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
+    "@hot-loader/react-dom": "16.9.0-4.12.11",
+    "react-router-dom": "^5.0.1",
+    "styled-components": "^4.3.2"
   },
   "husky": {
     "hooks": {
