--- a/React/Routing boilerplate/.babelrc
+++ b/React/Routing boilerplate/.babelrc
@@ -4,7 +4,9 @@
         "@babel/preset-react"
     ],
     "plugins": [
+        ["emotion", { "sourceMap": true}],
         "react-hot-loader/babel",
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-syntax-dynamic-import"
       ]
 }
