--- a/React/SPA boilerplate/package.json
+++ b/React/SPA boilerplate/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.16",
     "css-loader": "^3.2.0",
+    "dotenv": "^8.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.3",
@@ -42,7 +43,8 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpackbar": "^4.0.0"
   },
   "dependencies": {
     "@emotion/core": "^10.0.16",
