--- a/React/React practices/package.json
+++ b/React/React practices/package.json
@@ -44,7 +44,8 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpackbar": "^4.0.0"
   },
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
