--- a/React/React practices/package.json
+++ b/React/React practices/package.json
@@ -55,7 +55,8 @@
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
     "react-redux": "^7.1.1",
-    "react-router-dom": "^5.0.1",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4"
   },
   "husky": {
