--- a/React/SPA boilerplate/.babelrc
+++ b/React/SPA boilerplate/.babelrc
@@ -6,6 +6,7 @@
     "plugins": [
         ["emotion", { "sourceMap": true}],
         "react-hot-loader/babel",
+        "@babel/plugin-proposal-optional-chaining",
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-syntax-dynamic-import"
       ]
