--- a/React/SPA boilerplate/package.json
+++ b/React/SPA boilerplate/package.json
@@ -7,19 +7,18 @@
   "author": "Echzio <aleksassincreed@yandex.ru>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode development",
-    "watch": "webpack --watch --mode development",
-    "dev": "webpack-dev-server --open --mode development",
-    "pretty": "prettier --write src/**/*.{js,jsx,scss}",
-    "prod": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --open --hot --mode development",
+    "pretty": "prettier --write src/**/*.{js,jsx,scss}"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.5.5",    
+    "@babel/register": "^7.5.5",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.16",
     "css-loader": "^3.2.0",
@@ -33,13 +32,13 @@
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.18.2",    
+    "prettier": "^1.18.2",
     "sass-loader": "^7.2.0",
+    "style-loader": "^1.0.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.8.0",
     "terser-webpack-plugin": "^1.4.1",
-    "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
@@ -49,10 +48,10 @@
   "dependencies": {
     "@emotion/core": "^10.0.16",
     "@emotion/styled": "^10.0.15",
+    "@hot-loader/react-dom": "16.9.0-4.12.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-hot-loader": "^4.12.11",
-    "@hot-loader/react-dom": "16.9.0-4.12.11"
+    "react-hot-loader": "^4.12.11"
   },
   "husky": {
     "hooks": {
