--- a/React/SPA boilerplate/package.json
+++ b/React/SPA boilerplate/package.json
@@ -41,6 +41,7 @@
     "terser-webpack-plugin": "^1.4.1",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
     "webpackbar": "^4.0.0"
