--- a/node.js/package.json
+++ b/node.js/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "nodelearn",
+  "name": "node",
   "version": "1.0.0",
-  "description": "learn node.js",
+  "description": "node.js + graphql",
   "main": "server.js",
   "repository": "https://github.com/Echzio/til.git",
   "author": "Echzio <aleksassincreed@yandex.ru>",
   "license": "MIT",
-  "scripts": {}
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
+    "nodemon": "^2.0.2"
+  }
 }
