--- a/React + RTK todo example/package.json
+++ b/React + RTK todo example/package.json
@@ -1,16 +1,14 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "description": "React learn",
+  "description": "React RTK",
   "main": "./src/index.js",
   "repository": "https://github.com/Echzio/til.git",
   "author": "Echzio <aleksassincreed@yandex.ru>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode development",
-    "watch": "webpack --watch --mode development",
-    "dev": "webpack-dev-server --open --mode development",    
-    "prod": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --open --mode development"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -34,5 +32,5 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3"
-  },
+  }
 }
