--- a/React/React + RTK + Router config/package.json
+++ b/React/React + RTK + Router config/package.json
@@ -1,30 +1,39 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "description": "React learn",
+  "description": "React RTK router config",
   "main": "./src/index.js",
   "repository": "https://github.com/Echzio/til.git",
   "author": "Echzio <aleksassincreed@yandex.ru>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode development",
-    "watch": "webpack --watch --mode development",
-    "dev": "webpack-dev-server --open --mode development",    
-    "prod": "webpack --mode production"
+    "build": "webpack --mode production",
+    "pretty": "prettier --write src/**/*.{js,jsx,scss}",
+    "dev": "webpack-dev-server --open --mode development"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "dotenv": "^8.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.2",
+    "lint-staged": "^10.0.7",
     "path": "^0.12.7",
+    "prettier": "^1.19.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.9.0",
+    "url-loader": "^2.1.0",
     "terser-webpack-plugin": "^2.3.4",
     "webpack": "^4.39.1",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
     "webpackbar": "^4.0.0"
@@ -39,4 +48,14 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js, jsx}": [
+      "prettier --write"
+    ]
+  }
 }
