--- a/React/React + RTK + Router config/package.json
+++ b/React/React + RTK + Router config/package.json
@@ -27,11 +27,12 @@
     "lint-staged": "^10.0.7",
     "path": "^0.12.7",
     "prettier": "^1.19.1",
+    "redux-logger": "^3.0.6",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.9.0",
-    "url-loader": "^2.1.0",
     "terser-webpack-plugin": "^2.3.4",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.6",
@@ -46,7 +47,8 @@
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "redux-saga": "^1.1.3"
   },
   "husky": {
     "hooks": {
