--- a/React/React + Effector/.babelrc
+++ b/React/React + Effector/.babelrc
@@ -3,11 +3,12 @@
         "@babel/preset-env",
         "@babel/preset-react"
     ],
-    "plugins": [        
+    "plugins": [
         "react-hot-loader/babel",
         "@babel/plugin-proposal-optional-chaining",
         "@babel/plugin-proposal-nullish-coalescing-operator",
         "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-syntax-dynamic-import"
-      ]
+        "@babel/plugin-syntax-dynamic-import",
+        "effector/babel-plugin"
+    ]
 }
