--- a/React/React + Effector/package.json
+++ b/React/React + Effector/package.json
@@ -16,13 +16,14 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/register": "^7.7.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
     "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -32,15 +33,13 @@
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "url-loader": "^2.1.0",
     "husky": "^4.2.2",
     "lint-staged": "^10.0.7",
-    "path": "^0.12.7",
     "preload-webpack-plugin": "3.0.0-beta.3",
     "prettier": "^1.19.1",
-    "redux-logger": "^3.0.6",    
     "terser-webpack-plugin": "^2.3.4",
-    "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
@@ -48,14 +47,11 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "16.11.0",
-    "@reduxjs/toolkit": "^1.2.3",
+    "effector": "^21.2.0",
+    "effector-react": "^21.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18",
-    "react-redux": "^7.1.3",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.1.2",
-    "redux-saga": "^1.1.3"
+    "react-hot-loader": "^4.12.18"
   },
   "husky": {
     "hooks": {
