--- a/React/SPA boilerplate/.babelrc
+++ b/React/SPA boilerplate/.babelrc
@@ -1,13 +1,11 @@
 {
-    "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
-    ],
-    "plugins": [
-        ["emotion", { "sourceMap": true}],
-        "react-hot-loader/babel",
-        "@babel/plugin-proposal-optional-chaining",
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-syntax-dynamic-import"
-      ]
+  "presets": ["@babel/preset-env", "@babel/preset-react", "@emotion/babel-preset-css-prop"],
+  "plugins": [
+    ["emotion", { "sourceMap": true }],
+    "react-hot-loader/babel",
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-dynamic-import"
+  ]
 }
