--- a/React/SPA boilerplate/package.json
+++ b/React/SPA boilerplate/package.json
@@ -14,18 +14,28 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.16",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.4.1",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
     "mini-css-extract-plugin": "^0.8.0",
@@ -33,6 +43,7 @@
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "preload-webpack-plugin": "3.0.0-beta.3",
     "prettier": "^1.18.2",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
@@ -42,7 +53,6 @@
     "terser-webpack-plugin": "^1.4.1",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
-    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
     "webpackbar": "^4.0.0"
