--- a/React/react + webpack + typescript + jest/package.json
+++ b/React/react + webpack + typescript + jest/package.json
@@ -5,13 +5,12 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development --open",
+    "dev": "webpack serve --mode development --open",
     "pretty": "prettier --write src/**/*.{js,ts,css}",
     "test": "node --input-type=module node_modules/.bin/jest"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
@@ -23,7 +22,8 @@
     "@typescript-eslint/parser": "^4.15.2",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^5.0.2",
+    "core-js": "^3.11.3",
+    "css-loader": "^5.2.4",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.2.0",
@@ -36,22 +36,22 @@
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^1.3.8",
+    "mini-css-extract-plugin": "^1.6.0",
     "path": "^0.12.7",
     "preload-webpack-plugin": "3.0.0-beta.3",
     "prettier": "^2.2.1",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^4.2.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^4.2.4",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",  
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0"
   },
   "husky": {
